kubernetes/apps/kube-system/cilium/gateway/network-policy-bots.yaml
---
# https://docs.cilium.io/en/latest/security/policy/#network-policy
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: block-web-crawlers
spec:
  description: Block known web crawlers and suspicious traffic patterns
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: gateway
      gateway.networking.k8s.io/gateway-name: external
  ingress:
    - toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
          rules:
            http:
              - method: GET
                headers:
                  "User-Agent":
                    - "*Amazonbot*"
                    - "*anthropic-ai*"
                    - "*AwarioRssBot*"
                    - "*AwarioSmartBot*"
                    - "*Bytespider*"
                    - "*CCBot*"
                    - "*ChatGPT-User*"
                    - "*ClaudeBot*"
                    - "*Claude-Web*"
                    - "*cohere-ai*"
                    - "*DataForSeoBot*"
                    - "*FacebookBot*"
                    - "*Google-Extended*"
                    - "*GPTBot*"
                    - "*magpie-crawler*"
                    - "*omgili*"
                    - "*omgilibot*"
                    - "*peer39_crawler*"
                    - "*PerplexityBot*"
                deny: true
